# ascent

./: .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  .uberenv_config.json  Alpine.html  AlpineAPI.html  Ascent.html  AscentAPI.html  BuildingAlpine.html  BuildingAscent.html  BuildingStrawman.html  CHANGELOG.md  COPYRIGHT  ExampleIntegrations.html  GPU_notes.html  LICENSE  Licenses.html  Overview.html  Publications.html  README.md  Releases.html  Strawman.html  StrawmanAPI.html  _azure-pipelines.yml  azure-pipelines.yml  bootstrap-env.sh  circle.yml  cloverleaf_ascent_actions.yaml  config-build.sh  do_it.py  genindex.html  hashes.txt  holo.py  index.html  objects.inv  package.py  search.html  searchindex.js  workspace.code-workspace
src/: CMakeLists.txt
src/CMake/: CMakeBasics.cmake  Setup3rdParty.cmake  SetupCompilerOptions.cmake  SetupCuda.cmake  SetupDocs.cmake  SetupFortran.cmake  SetupIncludes.cmake  SetupOpenMP.cmake  SetupTests.cmake
src/alpine/: CMakeLists.txt  alpine.cpp  alpine.hpp  alpine_config.h.in  alpine_config.in  alpine_exports.h  alpine_pipeline.cpp  alpine_pipeline.hpp  alpine_runtime.cpp  alpine_runtime.hpp
src/alpine/c/: alpine.h  alpine_c.cpp
src/alpine/flow/: CMakeLists.txt  alpine_flow.cpp  alpine_flow.hpp  alpine_flow_data.cpp  alpine_flow_data.hpp  alpine_flow_filter.cpp  alpine_flow_filter.hpp  alpine_flow_filters.cpp  alpine_flow_filters.hpp  alpine_flow_graph.cpp  alpine_flow_graph.hpp  alpine_flow_registry.cpp  alpine_flow_registry.hpp  alpine_flow_registry_filters.cpp  alpine_flow_registry_filters.hpp  alpine_flow_workspace.cpp  alpine_flow_workspace.hpp
src/alpine/fortran/: alpine_fortran.f90
src/alpine/pipelines/: alpine_alpine_pipeline.cpp  alpine_alpine_pipeline.hpp  alpine_blueprint_hdf5_pipeline.cpp  alpine_blueprint_hdf5_pipeline.hpp  alpine_data_adapter.cpp  alpine_data_adapter.hpp  alpine_empty_pipeline.cpp  alpine_empty_pipeline.hpp  alpine_flow_pipeline.cpp  alpine_flow_pipeline.hpp  alpine_vtkm_pipeline.cpp  alpine_vtkm_pipeline.hpp  alpine_vtkm_pipeline_backend.cpp  alpine_vtkm_pipeline_backend.hpp  alpine_vtkm_renderer.cpp  alpine_vtkm_renderer.hpp
src/alpine/python/: CMakeLists.txt  alpine_python.cpp  alpine_python_exports.h  setup.py
src/alpine/runtimes/: alpine_ascent_runtime.cpp  alpine_ascent_runtime.hpp  alpine_data_adapter.cpp  alpine_data_adapter.hpp  alpine_empty_runtime.cpp  alpine_empty_runtime.hpp  alpine_flow_runtime.cpp  alpine_flow_runtime.hpp  alpine_main_runtime.cpp  alpine_main_runtime.hpp  alpine_vtkh_data_adapter.cpp  alpine_vtkh_data_adapter.hpp  alpine_vtkm_renderer.hpp  alpine_vtkm_runtime.cpp  alpine_vtkm_runtime.hpp
src/alpine/utils/: alpine_block_timer.cpp  alpine_block_timer.hpp  alpine_compositor_base.hpp  alpine_diy_compositor.cpp  alpine_diy_compositor.hpp  alpine_diy_image.hpp  alpine_file_system.cpp  alpine_file_system.hpp  alpine_icet_compositor.cpp  alpine_icet_compositor.hpp  alpine_logging.hpp  alpine_png_encoder.cpp  alpine_png_encoder.hpp  alpine_vtkm_dataset_info.hpp  alpine_web_interface.cpp  alpine_web_interface.hpp
src/alpine/web_client/: index.html
src/ascent/: CMakeLists.txt  ascent.cpp  ascent.hpp  ascent_config.h.in  ascent_config.mk.in  ascent_exports.h  ascent_license.hpp  ascent_runtime.cpp  ascent_runtime.hpp
src/ascent/ascent_jupyter_bridge/: README.md  console_client.py  setup.py
src/ascent/c/: ascent.h  ascent_c.cpp
src/ascent/cmake/: ascent_config.mk.in
src/ascent/fortran/: ascent.mod  ascent_fortran.f90
src/ascent/hola/: ascent_hola.cpp  ascent_hola.hpp  ascent_hola_mpi.cpp  ascent_hola_mpi.hpp
src/ascent/python/: CMakeLists.txt  ascent_python.cpp  ascent_python_exports.h  run_jupyter_lab_with_ascent.sh.in  run_jupyter_notebook_with_ascent.sh.in  run_python_with_ascent.sh.in  setup.py
src/ascent/runtimes/: ascent_ascent_runtime.cpp  ascent_catalyst_data_adapter.cpp  ascent_catalyst_data_adapter.hpp  ascent_data_object.cpp  ascent_data_object.hpp  ascent_dray_data_adapter.cpp  ascent_dray_data_adapter.hpp  ascent_empty_runtime.cpp  ascent_empty_runtime.hpp  ascent_expression_eval.cpp  ascent_expression_eval.hpp  ascent_flow_runtime.cpp  ascent_flow_runtime.hpp  (+16 more)
src/cmake/: AscentBuildType.cmake  CMakeBasics.cmake  Setup3rdParty.cmake  SetupBLT.cmake  SetupFortran.cmake  SetupIncludes.cmake  SetupTests.cmake  VTKmDeviceSymbols.cmake  ascent-config.cmake.in  ascent-deps-paths.cmake.in
src/config/: AscentConfig.cmake.in  CMakeLists.txt  apcomp_config.mk.in  ascent_config.mk.in  ascent_setup_deps.cmake  ascent_setup_targets.cmake  dray_config.mk.in  vtkh_config.mk.in
src/docs/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/flow/: CMakeLists.txt  alpine_flow_filter.hpp  alpine_flow_graph.hpp  alpine_flow_workspace.cpp  alpine_flow_workspace.hpp  flow.hpp  flow_config.h.in  flow_data.cpp  flow_data.hpp  flow_exports.h  flow_filter.cpp  flow_filter.hpp  flow_filters.cpp  flow_filters.hpp  flow_graph.cpp  flow_graph.hpp  flow_python_interpreter.cpp  flow_python_interpreter.hpp  flow_registry.cpp  flow_registry.hpp  flow_timer.cpp  flow_timer.hpp  flow_workspace.cpp  flow_workspace.hpp
src/libs/: CMakeLists.txt
src/rover/: CMakeLists.txt  domain.cpp  domain.hpp  energy_engine.cpp  energy_engine.hpp  engine.hpp  image.cpp  image.hpp  partial_image.hpp  rover.cpp  rover.hpp  rover_exceptions.hpp  rover_exports.h  rover_types.hpp  scheduler.cpp  scheduler.hpp  scheduler_base.cpp  scheduler_base.hpp  static_scheduler.hpp  volume_engine.cpp  volume_engine.hpp  vtkm_typedefs.hpp
src/strawman/: CMakeLists.txt  strawman.cpp  strawman_pipeline.cpp  strawman_pipeline.hpp
src/tests/: CMakeLists.txt  gen_img_compare_html_report.py  t_config.hpp.in  t_utils.hpp
src/thirdparty_builtin/: CMakeLists.txt
src/utilities/: CMakeLists.txt
src/vtk-h/: CMakeLists.txt  vtkh.cpp  vtkh.hpp  vtkh_clip.cpp  vtkh_clip.hpp  vtkh_data_set.cpp  vtkh_data_set.hpp  vtkh_error.hpp  vtkh_filter.hpp  vtkh_marching_cubes.cpp  vtkh_marching_cubes.hpp  vtkh_renderer.hpp  vtkh_threshold.cpp  vtkh_threshold.hpp  vtkh_wavelet_compressor.cpp  vtkh_wavelet_compressor.hpp
(+3074 files in other folders)
